--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    background-color: rgb(26, 26, 168);
+    background-color: blue;
     display: flex;
     align-items: center;
 }
@@ -70,7 +70,7 @@ header {
 }
 
 footer {
-    background-color: black;
+    background-color: #ff0080;
     height: 50px;
 }
 
@@ -81,4 +81,13 @@ button {
 
 input {
     margin: 10px;
+}
+
+.toolTip {
+    position: relative;
+    display: inline-block;
+}
+
+.toolTip .toolTipText {
+    visibility: hidden;
 }
